--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "9.3.5",
+    "next": "^9.3.5",
+    "next-with-error": "^1.2.0",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   }
