--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next-with-error": "^1.2.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "rollbar-browser": "^1.9.5",
     "sass": "^1.26.5"
   }
 }
